fix: rebuild color contrast function; resize button height

--- a/projects/components/styles/buttons/_button.base.scss
+++ b/projects/components/styles/buttons/_button.base.scss
@@ -2,17 +2,19 @@ $padding: 0 16px !default;
 $margin: 0 !default;
 $border-radius: 4px !default;
 
-$line-height: 44px !default;
+$line-height: 24px !default;
 
 @mixin base() {
   box-sizing: border-box;
   position: relative;
   border: none;
   display: inline-block;
-
+  cursor: pointer;
   line-height: $line-height;
   border-radius: $border-radius;
   margin: $margin;
   padding: $padding;
+  min-height: 40px;
+
 
 }
