--- a/projects/components/styles/typography/_typography.theme.scss
+++ b/projects/components/styles/typography/_typography.theme.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@200;400;500;600;800&family=Work+Sans:wght@400;500&display=swap');
 .lmdc-typography {
-  font-family: 'Work Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
+  font-family: 'Noto Sans Display', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 0.875rem;
   font-weight: 400;
   color: #140A00;
   line-height: 20px;
 
 }
+
